# heico

./: .gitignore  Cargo.toml  NICE-TO-HAVE.md  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
installer/: heico.iss  install.bat  install.ps1  uninstall.bat  uninstall.ps1
src/: main.rs  notify.rs
