[package]
name = "heico"
version = "0.1.0"
edition = "2021"
description = "Convertisseur HEIC vers JPG simple, rapide, avec menu contextuel Windows"
license = "MIT"
repository = "https://github.com/bastienbrasseur/heico"
authors = ["Bastien Brasseur <bastien.brasseur@gmail.com>"]
readme = "README.md"

[[bin]]
name = "heico"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
libheif-rs = "1.0"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
img-parts = "0.3"
rayon = "1.10"
indicatif = "0.17"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
